tests/misc/errors/js/module-string-name-import.js
// https://github.com/babel/babel/issues/12209
import { "foo" as foo } from "module-a";
